--- a/Pandas/practicePandas.ipynb
+++ b/Pandas/practicePandas.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "4316e406",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
        "44                                   Republican              Mike Pence  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "143e21c0",
    "metadata": {},
    "outputs": [
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "9588c5bd",
    "metadata": {},
    "outputs": [
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "46cd49c4",
    "metadata": {},
    "outputs": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "804e37ec",
    "metadata": {},
    "outputs": [
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "ef311102",
    "metadata": {},
    "outputs": [
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "74f1eb34",
    "metadata": {},
    "outputs": [
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "57094f8b",
    "metadata": {},
    "outputs": [
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "9a7d3b94",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "b4ae382b",
    "metadata": {},
    "outputs": [
@@ -1153,6 +1153,230 @@
     "\n",
     "print(\"presidents from the Republican or Democratic Party:\\n\")\n",
     "print(df[(df['party'] == 'Republican') | (df['party'] == 'Democratic')] [['president']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3d5de0d",
+   "metadata": {},
+   "source": [
+    "### Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "43c67ff1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "'Wife' column not found in the Dataset.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Drop columns\n",
+    "\n",
+    "if \"Wife\" in df.columns:\n",
+    "    df_cleaned = df.drop(columns=['Wife'])\n",
+    "    print(\"\\n-------Dropped 'Wife' Column-------\\n\", df_cleaned.head(10))\n",
+    "else:\n",
+    "    print(\"\\n'Wife' column not found in the Dataset.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a0d3150f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\neelp\\AppData\\Local\\Temp\\ipykernel_26016\\202257069.py:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df[\"end\"].fillna(\"Present\", inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fill missing values\n",
+    "\n",
+    "if \"end\" in df.columns:\n",
+    "    df[\"end\"].fillna(\"Present\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "eacfa306",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted DateTime\n",
+      "\n",
+      "                 president      start        end\n",
+      "0        George Washington 1789-04-30 1797-03-04\n",
+      "1               John Adams 1797-03-04 1801-03-04\n",
+      "2         Thomas Jefferson 1801-03-04 1809-03-04\n",
+      "3            James Madison 1809-03-04 1817-03-04\n",
+      "4             James Monroe 1817-03-04 1825-03-04\n",
+      "5        John Quincy Adams 1825-03-04 1829-03-04\n",
+      "6           Andrew Jackson 1829-03-04 1837-03-04\n",
+      "7         Martin Van Buren 1837-03-04 1841-03-04\n",
+      "8   William Henry Harrison 1841-03-04 1841-04-04\n",
+      "9               John Tyler 1841-04-04 1845-03-04\n",
+      "10           James K. Polk 1845-03-04 1849-03-04\n",
+      "11          Zachary Taylor 1849-03-04 1850-07-09\n",
+      "12        Millard Fillmore 1850-07-09 1853-03-04\n",
+      "13         Franklin Pierce 1853-03-04 1857-03-04\n",
+      "14          James Buchanan 1857-03-04 1861-03-04\n",
+      "15         Abraham Lincoln 1861-03-04 1865-04-15\n",
+      "16          Andrew Johnson 1865-04-15 1869-03-04\n",
+      "17        Ulysses S. Grant 1869-03-04 1877-03-04\n",
+      "18     Rutherford B. Hayes 1877-03-04 1881-03-04\n",
+      "19       James A. Garfield 1881-03-04 1881-09-19\n",
+      "20       Chester A. Arthur 1881-09-19 1885-03-04\n",
+      "21        Grover Cleveland 1885-03-04 1889-03-04\n",
+      "22       Benjamin Harrison 1889-03-04 1893-03-04\n",
+      "23        Grover Cleveland 1893-03-04 1897-03-04\n",
+      "24        William McKinley 1897-03-04        NaT\n",
+      "25      Theodore Roosevelt        NaT        NaT\n",
+      "26     William Howard Taft        NaT        NaT\n",
+      "27          Woodrow Wilson        NaT        NaT\n",
+      "28       Warren G. Harding        NaT        NaT\n",
+      "29         Calvin Coolidge        NaT        NaT\n",
+      "30          Herbert Hoover        NaT        NaT\n",
+      "31   Franklin D. Roosevelt        NaT        NaT\n",
+      "32         Harry S. Truman        NaT        NaT\n",
+      "33    Dwight D. Eisenhower        NaT        NaT\n",
+      "34         John F. Kennedy        NaT        NaT\n",
+      "35       Lyndon B. Johnson        NaT        NaT\n",
+      "36           Richard Nixon        NaT        NaT\n",
+      "37             Gerald Ford        NaT        NaT\n",
+      "38            Jimmy Carter        NaT        NaT\n",
+      "39           Ronald Reagan        NaT        NaT\n",
+      "40       George H. W. Bush        NaT        NaT\n",
+      "41            Bill Clinton        NaT        NaT\n",
+      "42          George W. Bush        NaT        NaT\n",
+      "43            Barack Obama        NaT        NaT\n",
+      "44            Donald Trump        NaT        NaT\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert date columns to datetime\n",
+    "\n",
+    "for col in ['start', 'end']:\n",
+    "    if col in df.columns:\n",
+    "        df[col] = pd.to_datetime(df[col], errors='coerce')\n",
+    "\n",
+    "print(\"Converted DateTime\\n\")\n",
+    "print(df[['president', 'start', 'end']].head(50))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "31737424",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duration :\n",
+      "\n",
+      "                 president      start        end  duration_days\n",
+      "0        George Washington 1789-04-30 1797-03-04         2865.0\n",
+      "1               John Adams 1797-03-04 1801-03-04         1460.0\n",
+      "2         Thomas Jefferson 1801-03-04 1809-03-04         2922.0\n",
+      "3            James Madison 1809-03-04 1817-03-04         2922.0\n",
+      "4             James Monroe 1817-03-04 1825-03-04         2922.0\n",
+      "5        John Quincy Adams 1825-03-04 1829-03-04         1461.0\n",
+      "6           Andrew Jackson 1829-03-04 1837-03-04         2922.0\n",
+      "7         Martin Van Buren 1837-03-04 1841-03-04         1461.0\n",
+      "8   William Henry Harrison 1841-03-04 1841-04-04           31.0\n",
+      "9               John Tyler 1841-04-04 1845-03-04         1430.0\n",
+      "10           James K. Polk 1845-03-04 1849-03-04         1461.0\n",
+      "11          Zachary Taylor 1849-03-04 1850-07-09          492.0\n",
+      "12        Millard Fillmore 1850-07-09 1853-03-04          969.0\n",
+      "13         Franklin Pierce 1853-03-04 1857-03-04         1461.0\n",
+      "14          James Buchanan 1857-03-04 1861-03-04         1461.0\n",
+      "15         Abraham Lincoln 1861-03-04 1865-04-15         1503.0\n",
+      "16          Andrew Johnson 1865-04-15 1869-03-04         1419.0\n",
+      "17        Ulysses S. Grant 1869-03-04 1877-03-04         2922.0\n",
+      "18     Rutherford B. Hayes 1877-03-04 1881-03-04         1461.0\n",
+      "19       James A. Garfield 1881-03-04 1881-09-19          199.0\n",
+      "20       Chester A. Arthur 1881-09-19 1885-03-04         1262.0\n",
+      "21        Grover Cleveland 1885-03-04 1889-03-04         1461.0\n",
+      "22       Benjamin Harrison 1889-03-04 1893-03-04         1461.0\n",
+      "23        Grover Cleveland 1893-03-04 1897-03-04         1461.0\n",
+      "24        William McKinley 1897-03-04        NaT            NaN\n",
+      "25      Theodore Roosevelt        NaT        NaT            NaN\n",
+      "26     William Howard Taft        NaT        NaT            NaN\n",
+      "27          Woodrow Wilson        NaT        NaT            NaN\n",
+      "28       Warren G. Harding        NaT        NaT            NaN\n",
+      "29         Calvin Coolidge        NaT        NaT            NaN\n",
+      "30          Herbert Hoover        NaT        NaT            NaN\n",
+      "31   Franklin D. Roosevelt        NaT        NaT            NaN\n",
+      "32         Harry S. Truman        NaT        NaT            NaN\n",
+      "33    Dwight D. Eisenhower        NaT        NaT            NaN\n",
+      "34         John F. Kennedy        NaT        NaT            NaN\n",
+      "35       Lyndon B. Johnson        NaT        NaT            NaN\n",
+      "36           Richard Nixon        NaT        NaT            NaN\n",
+      "37             Gerald Ford        NaT        NaT            NaN\n",
+      "38            Jimmy Carter        NaT        NaT            NaN\n",
+      "39           Ronald Reagan        NaT        NaT            NaN\n",
+      "40       George H. W. Bush        NaT        NaT            NaN\n",
+      "41            Bill Clinton        NaT        NaT            NaN\n",
+      "42          George W. Bush        NaT        NaT            NaN\n",
+      "43            Barack Obama        NaT        NaT            NaN\n",
+      "44            Donald Trump        NaT        NaT            NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create new column: presidency duration (in days)\n",
+    "\n",
+    "if 'start' in df.columns and 'end' in df.columns:\n",
+    "    df['duration_days'] = (df['end'] - df['start']).dt.days\n",
+    "\n",
+    "print(\"Duration :\\n\")\n",
+    "print(df[['president', 'start', 'end', 'duration_days']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ed5ef817",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Cleaned dataset saved to 'us_presidents_cleaned.csv'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save cleaned dataset\n",
+    "\n",
+    "df.to_csv('us_presidents_cleaned.csv', index=False)\n",
+    "print(\"✅ Cleaned dataset saved to 'us_presidents_cleaned.csv'\")"
    ]
   }
  ],
