--- a/Pandas/practicePandas.ipynb
+++ b/Pandas/practicePandas.ipynb
@@ -1378,6 +1378,252 @@
     "df.to_csv('us_presidents_cleaned.csv', index=False)\n",
     "print(\"✅ Cleaned dataset saved to 'us_presidents_cleaned.csv'\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89be327f",
+   "metadata": {},
+   "source": [
+    "### Grouping & Aggregation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "dae63b11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Presidents by Party:\n",
+      "\n",
+      "party\n",
+      "Democratic                                     15\n",
+      "Democratic-  Republican                         4\n",
+      "Federalist                                      1\n",
+      "National Union   [i]   ( Democratic )   [j]     1\n",
+      "Nonpartisan   [13]                              1\n",
+      "Republican                                     18\n",
+      "Republican   ( National Union )   [i]           1\n",
+      "Whig                                            3\n",
+      "Whig   April 4, 1841  –  September 13, 1841     1\n",
+      "Name: president, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Group by party → count presidents\n",
+    "\n",
+    "print(\"Number of Presidents by Party:\\n\")\n",
+    "print(df.groupby(\"party\")['president'].count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "131a7328",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Presidency Duration by Party:\n",
+      "\n",
+      "party\n",
+      "Democratic                                     1669.714286\n",
+      "Democratic-  Republican                        2556.750000\n",
+      "Federalist                                     1460.000000\n",
+      "National Union   [i]   ( Democratic )   [j]    1419.000000\n",
+      "Nonpartisan   [13]                             2865.000000\n",
+      "Republican                                     1461.000000\n",
+      "Republican   ( National Union )   [i]          1503.000000\n",
+      "Whig                                            497.333333\n",
+      "Whig   April 4, 1841  –  September 13, 1841    1430.000000\n",
+      "Name: duration_days, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Group by party → average presidency duration\n",
+    "\n",
+    "if 'duration_days' in df.columns:\n",
+    "    print(\"Average Presidency Duration by Party:\\n\")\n",
+    "    print(df.groupby(\"party\")['duration_days'].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c4d0c9a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value Counts by Party:\n",
+      "\n",
+      "party\n",
+      "Republican                                     18\n",
+      "Democratic                                     15\n",
+      "Democratic-  Republican                         4\n",
+      "Whig                                            3\n",
+      "Nonpartisan   [13]                              1\n",
+      "Federalist                                      1\n",
+      "Whig   April 4, 1841  –  September 13, 1841     1\n",
+      "Republican   ( National Union )   [i]           1\n",
+      "National Union   [i]   ( Democratic )   [j]     1\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Value counts (how many from each party)\n",
+    "\n",
+    "print(\"Value Counts by Party:\\n\")\n",
+    "print(df['party'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "18a99b43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted Presidendicy Duration:\n",
+      "\n",
+      "                 president  duration_days\n",
+      "3            James Madison         2922.0\n",
+      "2         Thomas Jefferson         2922.0\n",
+      "6           Andrew Jackson         2922.0\n",
+      "4             James Monroe         2922.0\n",
+      "17        Ulysses S. Grant         2922.0\n",
+      "0        George Washington         2865.0\n",
+      "15         Abraham Lincoln         1503.0\n",
+      "5        John Quincy Adams         1461.0\n",
+      "23        Grover Cleveland         1461.0\n",
+      "7         Martin Van Buren         1461.0\n",
+      "13         Franklin Pierce         1461.0\n",
+      "10           James K. Polk         1461.0\n",
+      "21        Grover Cleveland         1461.0\n",
+      "22       Benjamin Harrison         1461.0\n",
+      "18     Rutherford B. Hayes         1461.0\n",
+      "14          James Buchanan         1461.0\n",
+      "1               John Adams         1460.0\n",
+      "9               John Tyler         1430.0\n",
+      "16          Andrew Johnson         1419.0\n",
+      "20       Chester A. Arthur         1262.0\n",
+      "12        Millard Fillmore          969.0\n",
+      "11          Zachary Taylor          492.0\n",
+      "19       James A. Garfield          199.0\n",
+      "8   William Henry Harrison           31.0\n",
+      "24        William McKinley            NaN\n",
+      "25      Theodore Roosevelt            NaN\n",
+      "26     William Howard Taft            NaN\n",
+      "27          Woodrow Wilson            NaN\n",
+      "28       Warren G. Harding            NaN\n",
+      "29         Calvin Coolidge            NaN\n",
+      "30          Herbert Hoover            NaN\n",
+      "31   Franklin D. Roosevelt            NaN\n",
+      "32         Harry S. Truman            NaN\n",
+      "33    Dwight D. Eisenhower            NaN\n",
+      "34         John F. Kennedy            NaN\n",
+      "35       Lyndon B. Johnson            NaN\n",
+      "36           Richard Nixon            NaN\n",
+      "37             Gerald Ford            NaN\n",
+      "38            Jimmy Carter            NaN\n",
+      "39           Ronald Reagan            NaN\n",
+      "40       George H. W. Bush            NaN\n",
+      "41            Bill Clinton            NaN\n",
+      "42          George W. Bush            NaN\n",
+      "43            Barack Obama            NaN\n",
+      "44            Donald Trump            NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sorting by presidency duration (longest → shortest)\n",
+    "\n",
+    "if 'duration_days' in df.columns:\n",
+    "    print(\"Sorted Presidendicy Duration:\\n\")\n",
+    "    print(df.sort_values(by='duration_days', ascending=False)[['president', 'duration_days']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0296620d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted by Start Year: \n",
+      "\n",
+      "                 president      start\n",
+      "24        William McKinley 1897-03-04\n",
+      "23        Grover Cleveland 1893-03-04\n",
+      "22       Benjamin Harrison 1889-03-04\n",
+      "21        Grover Cleveland 1885-03-04\n",
+      "20       Chester A. Arthur 1881-09-19\n",
+      "19       James A. Garfield 1881-03-04\n",
+      "18     Rutherford B. Hayes 1877-03-04\n",
+      "17        Ulysses S. Grant 1869-03-04\n",
+      "16          Andrew Johnson 1865-04-15\n",
+      "15         Abraham Lincoln 1861-03-04\n",
+      "14          James Buchanan 1857-03-04\n",
+      "13         Franklin Pierce 1853-03-04\n",
+      "12        Millard Fillmore 1850-07-09\n",
+      "11          Zachary Taylor 1849-03-04\n",
+      "10           James K. Polk 1845-03-04\n",
+      "9               John Tyler 1841-04-04\n",
+      "8   William Henry Harrison 1841-03-04\n",
+      "7         Martin Van Buren 1837-03-04\n",
+      "6           Andrew Jackson 1829-03-04\n",
+      "5        John Quincy Adams 1825-03-04\n",
+      "4             James Monroe 1817-03-04\n",
+      "3            James Madison 1809-03-04\n",
+      "2         Thomas Jefferson 1801-03-04\n",
+      "1               John Adams 1797-03-04\n",
+      "0        George Washington 1789-04-30\n",
+      "25      Theodore Roosevelt        NaT\n",
+      "26     William Howard Taft        NaT\n",
+      "27          Woodrow Wilson        NaT\n",
+      "28       Warren G. Harding        NaT\n",
+      "29         Calvin Coolidge        NaT\n",
+      "30          Herbert Hoover        NaT\n",
+      "31   Franklin D. Roosevelt        NaT\n",
+      "32         Harry S. Truman        NaT\n",
+      "33    Dwight D. Eisenhower        NaT\n",
+      "34         John F. Kennedy        NaT\n",
+      "35       Lyndon B. Johnson        NaT\n",
+      "36           Richard Nixon        NaT\n",
+      "37             Gerald Ford        NaT\n",
+      "38            Jimmy Carter        NaT\n",
+      "39           Ronald Reagan        NaT\n",
+      "40       George H. W. Bush        NaT\n",
+      "41            Bill Clinton        NaT\n",
+      "42          George W. Bush        NaT\n",
+      "43            Barack Obama        NaT\n",
+      "44            Donald Trump        NaT\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sorting by start year\n",
+    "\n",
+    "if 'start' in df.columns:\n",
+    "    print(\"Sorted by Start Year: \\n\")\n",
+    "    print(df.sort_values(by='start', ascending=False)[['president', 'start']])"
+   ]
   }
  ],
  "metadata": {
