--- a/Pandas/practicePandas.ipynb
+++ b/Pandas/practicePandas.ipynb
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "43c67ff1",
    "metadata": {},
    "outputs": [
@@ -1174,18 +1174,53 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "'Wife' column not found in the Dataset.\n"
+      "-------Dropped 'prior' Column-------\n",
+      "    S.No.      start        end               president  \\\n",
+      "0      1 1789-04-30 1797-03-04       George Washington   \n",
+      "1      2 1797-03-04 1801-03-04              John Adams   \n",
+      "2      3 1801-03-04 1809-03-04        Thomas Jefferson   \n",
+      "3      4 1809-03-04 1817-03-04           James Madison   \n",
+      "4      5 1817-03-04 1825-03-04            James Monroe   \n",
+      "5      6 1825-03-04 1829-03-04       John Quincy Adams   \n",
+      "6      7 1829-03-04 1837-03-04          Andrew Jackson   \n",
+      "7      8 1837-03-04 1841-03-04        Martin Van Buren   \n",
+      "8      9 1841-03-04 1841-04-04  William Henry Harrison   \n",
+      "9     10 1841-04-04 1845-03-04              John Tyler   \n",
+      "\n",
+      "                                         party                    vice  \\\n",
+      "0                           Nonpartisan   [13]              John Adams   \n",
+      "1                                   Federalist        Thomas Jefferson   \n",
+      "2                      Democratic-  Republican              Aaron Burr   \n",
+      "3                      Democratic-  Republican          George Clinton   \n",
+      "4                      Democratic-  Republican      Daniel D. Tompkins   \n",
+      "5                      Democratic-  Republican         John C. Calhoun   \n",
+      "6                                   Democratic         John C. Calhoun   \n",
+      "7                                   Democratic  Richard Mentor Johnson   \n",
+      "8                                         Whig              John Tyler   \n",
+      "9  Whig   April 4, 1841  –  September 13, 1841           Office vacant   \n",
+      "\n",
+      "   duration_days  \n",
+      "0         2865.0  \n",
+      "1         1460.0  \n",
+      "2         2922.0  \n",
+      "3         2922.0  \n",
+      "4         2922.0  \n",
+      "5         1461.0  \n",
+      "6         2922.0  \n",
+      "7         1461.0  \n",
+      "8           31.0  \n",
+      "9         1430.0  \n"
      ]
     }
    ],
    "source": [
     "# Drop columns\n",
     "\n",
-    "if \"Wife\" in df.columns:\n",
-    "    df_cleaned = df.drop(columns=['Wife'])\n",
-    "    print(\"\\n-------Dropped 'Wife' Column-------\\n\", df_cleaned.head(10))\n",
+    "if \"prior\" in df.columns:\n",
+    "    df_cleaned = df.drop(columns=['prior'])\n",
+    "    print(\"\\n-------Dropped 'prior' Column-------\\n\", df_cleaned.head(10))\n",
     "else:\n",
-    "    print(\"\\n'Wife' column not found in the Dataset.\")"
+    "    print(\"\\n'prior' column not found in the Dataset.\")"
    ]
   },
   {
@@ -1623,6 +1658,226 @@
     "if 'start' in df.columns:\n",
     "    print(\"Sorted by Start Year: \\n\")\n",
     "    print(df.sort_values(by='start', ascending=False)[['president', 'start']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acc60e43",
+   "metadata": {},
+   "source": [
+    "### String Operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ef5609c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "President who were Vice Presidents:\n",
+      "\n",
+      "                 president  Was_VP\n",
+      "0        George Washington   False\n",
+      "1               John Adams    True\n",
+      "2         Thomas Jefferson    True\n",
+      "3            James Madison   False\n",
+      "4             James Monroe   False\n",
+      "5        John Quincy Adams   False\n",
+      "6           Andrew Jackson   False\n",
+      "7         Martin Van Buren    True\n",
+      "8   William Henry Harrison   False\n",
+      "9               John Tyler    True\n",
+      "10           James K. Polk   False\n",
+      "11          Zachary Taylor   False\n",
+      "12        Millard Fillmore    True\n",
+      "13         Franklin Pierce   False\n",
+      "14          James Buchanan   False\n",
+      "15         Abraham Lincoln   False\n",
+      "16          Andrew Johnson    True\n",
+      "17        Ulysses S. Grant   False\n",
+      "18     Rutherford B. Hayes   False\n",
+      "19       James A. Garfield   False\n",
+      "20       Chester A. Arthur    True\n",
+      "21        Grover Cleveland   False\n",
+      "22       Benjamin Harrison   False\n",
+      "23        Grover Cleveland   False\n",
+      "24        William McKinley   False\n",
+      "25      Theodore Roosevelt    True\n",
+      "26     William Howard Taft   False\n",
+      "27          Woodrow Wilson   False\n",
+      "28       Warren G. Harding   False\n",
+      "29         Calvin Coolidge    True\n",
+      "30          Herbert Hoover   False\n",
+      "31   Franklin D. Roosevelt   False\n",
+      "32         Harry S. Truman    True\n",
+      "33    Dwight D. Eisenhower   False\n",
+      "34         John F. Kennedy   False\n",
+      "35       Lyndon B. Johnson    True\n",
+      "36           Richard Nixon    True\n",
+      "37             Gerald Ford    True\n",
+      "38            Jimmy Carter   False\n",
+      "39           Ronald Reagan   False\n",
+      "40       George H. W. Bush    True\n",
+      "41            Bill Clinton   False\n",
+      "42          George W. Bush   False\n",
+      "43            Barack Obama   False\n",
+      "44            Donald Trump   False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check if \"Prior\" column contains \"Vice President\"\n",
+    "\n",
+    "df['Was_VP'] = df['prior'].str.contains('Vice President', case=False, na=False)\n",
+    "print(\"President who were Vice Presidents:\\n\")\n",
+    "print(df[['president', 'Was_VP']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "64fade5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracted Years:\n",
+      "\n",
+      "                 president  start_year  end_year\n",
+      "0        George Washington      1789.0    1797.0\n",
+      "1               John Adams      1797.0    1801.0\n",
+      "2         Thomas Jefferson      1801.0    1809.0\n",
+      "3            James Madison      1809.0    1817.0\n",
+      "4             James Monroe      1817.0    1825.0\n",
+      "5        John Quincy Adams      1825.0    1829.0\n",
+      "6           Andrew Jackson      1829.0    1837.0\n",
+      "7         Martin Van Buren      1837.0    1841.0\n",
+      "8   William Henry Harrison      1841.0    1841.0\n",
+      "9               John Tyler      1841.0    1845.0\n",
+      "10           James K. Polk      1845.0    1849.0\n",
+      "11          Zachary Taylor      1849.0    1850.0\n",
+      "12        Millard Fillmore      1850.0    1853.0\n",
+      "13         Franklin Pierce      1853.0    1857.0\n",
+      "14          James Buchanan      1857.0    1861.0\n",
+      "15         Abraham Lincoln      1861.0    1865.0\n",
+      "16          Andrew Johnson      1865.0    1869.0\n",
+      "17        Ulysses S. Grant      1869.0    1877.0\n",
+      "18     Rutherford B. Hayes      1877.0    1881.0\n",
+      "19       James A. Garfield      1881.0    1881.0\n",
+      "20       Chester A. Arthur      1881.0    1885.0\n",
+      "21        Grover Cleveland      1885.0    1889.0\n",
+      "22       Benjamin Harrison      1889.0    1893.0\n",
+      "23        Grover Cleveland      1893.0    1897.0\n",
+      "24        William McKinley      1897.0       NaN\n",
+      "25      Theodore Roosevelt         NaN       NaN\n",
+      "26     William Howard Taft         NaN       NaN\n",
+      "27          Woodrow Wilson         NaN       NaN\n",
+      "28       Warren G. Harding         NaN       NaN\n",
+      "29         Calvin Coolidge         NaN       NaN\n",
+      "30          Herbert Hoover         NaN       NaN\n",
+      "31   Franklin D. Roosevelt         NaN       NaN\n",
+      "32         Harry S. Truman         NaN       NaN\n",
+      "33    Dwight D. Eisenhower         NaN       NaN\n",
+      "34         John F. Kennedy         NaN       NaN\n",
+      "35       Lyndon B. Johnson         NaN       NaN\n",
+      "36           Richard Nixon         NaN       NaN\n",
+      "37             Gerald Ford         NaN       NaN\n",
+      "38            Jimmy Carter         NaN       NaN\n",
+      "39           Ronald Reagan         NaN       NaN\n",
+      "40       George H. W. Bush         NaN       NaN\n",
+      "41            Bill Clinton         NaN       NaN\n",
+      "42          George W. Bush         NaN       NaN\n",
+      "43            Barack Obama         NaN       NaN\n",
+      "44            Donald Trump         NaN       NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Extract year from Start / End\n",
+    "\n",
+    "if 'start' in df.columns:\n",
+    "    df['start_year'] = df['start'].dt.year\n",
+    "if 'end' in df.columns:\n",
+    "    df['end_year'] = df['end'].dt.year\n",
+    "\n",
+    "print(\"Extracted Years:\\n\")\n",
+    "print(df[['president', 'start_year', 'end_year']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "1090e86b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaned Party Names:\n",
+      "\n",
+      "                 president                            party_clean\n",
+      "0        George Washington                         Nonpartisan   \n",
+      "1               John Adams                             Federalist\n",
+      "2         Thomas Jefferson                 Democratic  Republican\n",
+      "3            James Madison                 Democratic  Republican\n",
+      "4             James Monroe                 Democratic  Republican\n",
+      "5        John Quincy Adams                 Democratic  Republican\n",
+      "6           Andrew Jackson                             Democratic\n",
+      "7         Martin Van Buren                             Democratic\n",
+      "8   William Henry Harrison                                   Whig\n",
+      "9               John Tyler          Whig   April      September  \n",
+      "10           James K. Polk                             Democratic\n",
+      "11          Zachary Taylor                                   Whig\n",
+      "12        Millard Fillmore                                   Whig\n",
+      "13         Franklin Pierce                             Democratic\n",
+      "14          James Buchanan                             Democratic\n",
+      "15         Abraham Lincoln      Republican    National Union    i\n",
+      "16          Andrew Johnson  National Union   i    Democratic    j\n",
+      "17        Ulysses S. Grant                             Republican\n",
+      "18     Rutherford B. Hayes                             Republican\n",
+      "19       James A. Garfield                             Republican\n",
+      "20       Chester A. Arthur                             Republican\n",
+      "21        Grover Cleveland                             Democratic\n",
+      "22       Benjamin Harrison                             Republican\n",
+      "23        Grover Cleveland                             Democratic\n",
+      "24        William McKinley                             Republican\n",
+      "25      Theodore Roosevelt                             Republican\n",
+      "26     William Howard Taft                             Republican\n",
+      "27          Woodrow Wilson                             Democratic\n",
+      "28       Warren G. Harding                             Republican\n",
+      "29         Calvin Coolidge                             Republican\n",
+      "30          Herbert Hoover                             Republican\n",
+      "31   Franklin D. Roosevelt                             Democratic\n",
+      "32         Harry S. Truman                             Democratic\n",
+      "33    Dwight D. Eisenhower                             Republican\n",
+      "34         John F. Kennedy                             Democratic\n",
+      "35       Lyndon B. Johnson                             Democratic\n",
+      "36           Richard Nixon                             Republican\n",
+      "37             Gerald Ford                             Republican\n",
+      "38            Jimmy Carter                             Democratic\n",
+      "39           Ronald Reagan                             Republican\n",
+      "40       George H. W. Bush                             Republican\n",
+      "41            Bill Clinton                             Democratic\n",
+      "42          George W. Bush                             Republican\n",
+      "43            Barack Obama                             Democratic\n",
+      "44            Donald Trump                             Republican\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Clean extra spaces / characters in Party column\n",
+    "\n",
+    "if 'party' in df.columns:\n",
+    "    df[\"party_clean\"] = df['party'].str.strip().str.replace(r'[^a-zA-Z ]', \"\", regex=True)\n",
+    "    print(\"Cleaned Party Names:\\n\")\n",
+    "    print(df[['president','party_clean']])"
    ]
   }
  ],
